--- a/views/templates/item.ejs
+++ b/views/templates/item.ejs
@@ -1,11 +1,10 @@
-
-    <%= item.name %> (<%= item.price %> Points)
+<li>
+    <div class="item-name"><%= item.name %> </div><div class="item-price">(<%= item.price %> Points)</div>
+    <div class="item-description"><%= item.description %> </div>
     <div>
         <form action='/buy/<%= item.name %>' method='post'>
-            <button class="btn custom-btn rounded-pill px-5">Buy</button>
+            <button class="btn custom-btn rounded-pill buy-button px-5">Buy</button>
         </form>
-        <form action='/moreinfo/<%= item.name %>' method='post'>
-            <button class="btn btn-secondary rounded-pill px-4">More Info</button>
-        </form>
+    
     </div>
-            
+</li>       
