--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -5,13 +5,16 @@
 
     <body>
         <!-- Chatbot -->
-        <form id="Chatter">
-            <input type="text" id="question" name="chatbot" placeholder="Ask Me Anything!">
-            <button type="submit">Send</button>
-        </form>
-
+        <form action="/aichat-home" method="get" class="">
+            <button type="submit" class="index-btn ">ChatBot</button>
+          </form>
+          <% if(show > 0) { %>
+            <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
+          <% } %>
         <!--Contents in the body tag-->
-        <img class="title" src="/img/DietLogo.png" alt="logo">
+        <div class="dietTaskImage">
+            <img class="title" src="/img/DietLogo.png" alt="logo">
+        </div>
         <div class="container taskCards">
             <h1>Points: <%= points %>
             </h1>
@@ -21,9 +24,11 @@
                 </div>
                 <span>
                     <form method="post" action="/addPointDiet" style="display: inline">
-                        <button class="btn btn-secondary float-right" type="submit">Done</button>
+                        <input type="text" name="task" value="<%= task1 %>" hidden>
+                        <button class="btn custom-btn float-right" type="submit">Done</button>
                     </form>
-                    <form method="post" action="/rerollDiet1" style="display: inline">
+                    <form method="post" action="/rerollDiet" style="display: inline">
+                        <input type="text" name="number" value="1" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                     </form>
                 </span>
@@ -34,9 +39,11 @@
                 </div>
                 <span>
                     <form method="post" action="/addPointDiet" style="display: inline">
-                        <button class="btn btn-secondary float-right" type="submit">Done</button>
+                        <input type="text" name="task" value="<%= task2 %>" hidden>
+                        <button class="btn custom-btn float-right" type="submit">Done</button>
                     </form>
-                    <form method="post" action="/rerollDiet2" style="display: inline">
+                    <form method="post" action="/rerollDiet" style="display: inline">
+                        <input type="text" name="number" value="2" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                     </form>
                 </span>
@@ -47,9 +54,11 @@
                 </div>
                 <span>
                     <form method="post" action="/addPointDiet" style="display: inline">
-                        <button class="btn btn-secondary float-right" type="submit">Done</button>
+                        <input type="text" name="task" value="<%= task3 %>" hidden>
+                        <button class="btn custom-btn float-right" type="submit">Done</button>
                     </form>
-                    <form method="post" action="/rerollDiet3" style="display: inline">
+                    <form method="post" action="/rerollDiet" style="display: inline">
+                        <input type="text" name="number" value="3" hidden>
                         <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                     </form>
                 </span>
