--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -93,6 +93,14 @@
                             <span>Ranking Progress</span>
                         </a>
                     </div>
+                    <% if(type == 'admin') { %>
+                    <div class="item">
+                        <a href="/admin" style="text-decoration : none;">
+                            <span class="icon"></span>
+                            <span>Admin</span>
+                        </a>
+                    </div>
+                    <% } %>
                 </div>
 
                 <!-- <div class="section">
