--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -8,7 +8,7 @@
         <form action="/aichat-home" method="get" class="">
             <button type="submit" class="index-btn ">ChatBot</button>
           </form>
-          <% if(show > 0) { %>
+          <% if(boostActive > 0) { %>
             <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
           <% } %>
         <!--Contents in the body tag-->
