Styled Task pages

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,6 +61,12 @@
                 <span>Dark Mode</span>
                 <input type="checkbox" class="toggle" checked>
             </div> -->
+                    <div class="item">
+                        <a href="/changeUsername" style="text-decoration : none;">
+                            <span class="icon">👤</span>
+                            <span>Change Username</span>
+                        </a>
+                    </div>
 
                     <div class="item">
                         <a href="/" id="profileImageLink" style="text-decoration: none;">
