--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -21,11 +21,11 @@
                 <button type="submit" class="btner"><img src="/img/chatBotImg.png"></button>
             </form>
         </div>
-
+        
         <!--Contents in the body tag-->
         <img class="title" src="/img/DietLogo.png" alt="logo">
 
-
+       
         <div class="container taskCards">
             <% if (noRerolls) { %>
                 <h1 class="error">Lacking Rerolls</h1>
@@ -82,4 +82,9 @@
                     </div>
 
         </div>
+        <div>
+            <% if(boostActive > 0) { %>
+                <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
+              <% } %>
+            </div>
         <%- include("templates/footer") %>
