--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -21,11 +21,10 @@
                 <button type="submit" class="btner"><img src="/img/chatBotImg.png"></button>
             </form>
         </div>
-
-
+        
         <!--Contents in the body tag-->
         <img class="title" src="/img/FitnessLogo.png" alt="logo">
-
+        
 
         <div class="container taskCards">
 
@@ -84,4 +83,9 @@
                     </div>
 
         </div>
+        <div>
+            <% if(boostActive > 0) { %>
+                <div class="boostActive">You have <%= boostActive %> minutes of boost time left.</div>
+              <% } %>
+            </div>
         <%- include("templates/footer") %>
