--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Welcome to FitUp</title>
+  <title>FitUp</title>
   <meta name="Comp2800 template" content="FitUp">
 
   <!-- Required meta tags -->
@@ -19,7 +19,7 @@
     </script>
 
   <!-- favicon -->
-  <link rel="icon" href="/img/fitup2.png">
+  <link rel="icon" href="/img/fitup.png">
 
   <!-- Other libraries CSS CDN go here -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet" />
