--- a/views/reset-email.ejs
+++ b/views/reset-email.ejs
@@ -1,10 +1,24 @@
 <%- include("templates/header") %>
-    <div class="login bg-light">
+<div class="login bg-light">
+    <!-- Display error message -->
+    <% if (errorMessage) { %>
+    <div class="alert alert-danger">
+        <%= errorMessage %>
+    </div>
+    <% } %>
+    <!-- Display success message -->
+    <% if (successMessage) { %>
+    <div class="alert alert-success">
+        <%= successMessage %>
+    </div>
+    <!-- Input form -->
+    <% } else { %>
     <form action="/reset-email" method="POST" class="index-form center">
         <label for="email">Enter your email:</label>
         <input type="email" id="email" name="email" required>
         <button type="submit" class="index-btn">Reset Password</button>
     </form>
-    </div>
-
+    <a href="/" class="index-btn center">Return to Index</a>   
+    <% } %>
+</div>
 <%- include("templates/end") %>
