--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -1,13 +1,23 @@
 <%- include("templates/header") %>
- <h1>Password Reset</h1>
-    <form action="/reset-password" method="POST" class="index-form center bg-light">
-        <input type="hidden" name="token" value="<%= token %>">
-        <label for="newPassword" class="center">New Password:</label>
-        <input class="center" type="password" id="newPassword" name="newPassword" required>
-        <br><br>
-        <label for="confirmNewPassword" class="center">Confirm New Password:</label>
-        <input class="center" type="password" id="confirmNewPassword" name="confirmNewPassword" required>
-        <br>
-        <button type="submit" class="index-btn">Reset Password</button>
-    </form>
-  <%- include("templates/end") %>
+    <div class="reset-password bg-light">
+        <!-- Display error message -->
+        <% if (errorMessage) { %>
+            <div class="alert alert-danger"><%= errorMessage %></div>
+        <% } %>
+        <!-- Display success message and login button -->
+        <% if (successMessage) { %>
+            <div class="alert alert-success"><%= successMessage %></div>
+            <a href="/login" class="btn btn-primary">Login</a>
+        <% } else { %>
+          <!-- Input form -->
+            <form action="/reset-password" method="POST" class="index-form center">
+                <input type="hidden" name="token" value="<%= token %>">
+                <label for="newPassword">Enter new password:</label>
+                <input type="password" id="newPassword" name="newPassword" required>
+                <label for="confirmNewPassword">Confirm new password:</label>
+                <input type="password" id="confirmNewPassword" name="confirmNewPassword" required>
+                <button type="submit" class="index-btn">Reset Password</button>
+            </form>
+        <% } %>
+    </div>
+<%- include("templates/end") %>
