Increased size of font

--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -9,7 +9,7 @@
             <div class="alert alert-success"><%= successMessage %></div>
             <a href="/login" class="btn btn-primary">Login</a>
         <% } else { %>
-          <!-- Input form -->
+          <!-- Display error message -->
             <form action="/reset-password" method="POST" class="index-form center">
                 <input type="hidden" name="token" value="<%= token %>">
                 <label for="newPassword">Enter new password:</label>
