--- a/views/reset-email.ejs
+++ b/views/reset-email.ejs
@@ -1,4 +1,5 @@
 <%- include("templates/header") %>
+
 <div class="login bg-light">
     <!-- Display error message -->
     <% if (errorMessage) { %>
@@ -13,12 +14,12 @@
     </div>
     <!-- Input form -->
     <% } else { %>
-    <form action="/reset-email" method="POST" class="index-form center">
-        <label for="email">Enter your email:</label>
+    <form action="/reset-email" method="POST" class="index-form center resize">
+        <label for="email" class="resize">Enter your email:</label>
         <input type="email" id="email" name="email" required>
         <button type="submit" class="index-btn">Reset Password</button>
     </form>
-    <a href="/" class="index-btn center">Return to Index</a>   
+    <a href="/" class="index-btn center">Return to Index</a><br>
     <% } %>
 </div>
 <%- include("templates/end") %>
