Added back buttons in signup/login, fixed logo centering, centered buttons in reset pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include("templates/header") %>
-</head>
+	</head>
+	<div class="header">
+	</div>
 
 	<div class="title" class="center">
 		<img src="/img/Logo.png" alt="logo" width="250" height="250">
@@ -16,5 +18,5 @@
 		</form>
 		<br>
 	</div>
-<%- include("templates/easteregg") %>
-<%- include("templates/end") %>
+	<%- include("templates/easteregg") %>
+		<%- include("templates/end") %>
