--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -1,7 +1,7 @@
 <%- include("templates/header") %>
 </head>
 
-<div class="title center">
+<div class="title" class="center">
     <img src="/img/logo.png" alt="FitUp Logo" width="250" height="250">
 </div>
 
@@ -50,5 +50,6 @@
         align-items: center;
         gap: 10px; /* Adjust the space between buttons */
         margin-top: 20px; /* Adjust the top margin as needed */
+        margin-left: 195px;
     }
 </style>
