--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 
+
 .button {
     border-radius: 25px;
     margin-top: 20px;
@@ -26,8 +27,18 @@
 }
 
 .title {
-    margin-top: 100px;
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 250px; /* Ensure the height is set to match the image height */
 }
+
+.title img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 
 .custom-btn {
     background-color: #FF8624;
