--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,28 +1,36 @@
 <%- include("templates/header") %>
 </head>
 
-  <div class="title" class="center">
-    <img src="/img/Logo.png" alt="logo" width="250" height="250">
-  </div>
+<div class="title" class="center">
+  <img src="/img/Logo.png" alt="logo" width="250" height="250">
+</div>
 
-  <div class="login bg-light">
-    <br>
+<div class="login bg-light">
 
-    <!-- existing user/email pop-up message -->
-    <% if (typeof errorMessage !=='undefined' && errorMessage) { %>
-      <div class="alert alert-danger" role="alert">
-        <%= errorMessage %>
-      </div>
-      <% } %>
+  <!-- Go Back button -->
+  <button type="button" class="index-btn top-left" style="margin-left: 10px;" onclick="location.href='/';">
+    Go Back
+  </button>
 
-        <form action="/signup" method="POST" class="index-form center">
-          <h1>Sign Up</h1>
-          <input type="text" name="username" placeholder="Username"><br>
-          <input type="email" name="email" placeholder="Email"><br>
-          <input type="password" name="password" placeholder="Password"><br>
-          <button type="submit" class="index-btn">Sign Up</button>
-        </form>
-        <br>
-  </div>
+  <br>
+
+  <!-- Existing user/email pop-up message -->
+  <% if (typeof errorMessage !== 'undefined' && errorMessage) { %>
+    <div class="alert alert-danger" role="alert">
+      <%= errorMessage %>
+    </div>
+  <% } %>
+
+  <form action="/signup" method="POST" class="index-form center">
+    <h1>Sign Up</h1>
+    <input type="text" name="username" placeholder="Username"><br>
+    <input type="email" name="email" placeholder="Email"><br>
+    <input type="password" name="password" placeholder="Password"><br>
+    <button type="submit" class="index-btn">Sign Up</button>
+  </form>
+  <br>
+
+</div>
+
 <%- include("templates/easteregg") %>
-  <%- include("templates/end") %>
+<%- include("templates/end") %>
